[package]
name = "stac-async"
version = "0.0.1"
edition = "2021"
description = "Asynchronous features for stac-rs"
documentation = "https://docs.rs/stac-async"
readme = "README.md"
repository = "https://github.com/gadomski/stac-incubator-rs"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
categories = ["science", "data-structures"]

[dependencies]
async-trait = "0.1"
path-slash = "0.1"
reqwest = "0.11"
serde_json = "1"
stac = "0.0.4"
tokio = { version = "1.17", features = ["fs", "macros"] }
url = "2"

[dev-dependencies]
tokio-test = "0.4"
