[package]
name = "stac-cli"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "3.1", features = ["derive"] }
console = "0.15"
indicatif = "0.17.0-rc.10"
path-slash = "0.1"
reqwest = "0.11"
serde_json = "1"
stac = "0.0.4"
stac-async = { path = "../async" }
tokio = { version = "1.17", features = ["macros", "sync", "rt-multi-thread"] }
url = "2"

[[bin]]
name = "stac"
path = "src/main.rs"

