[package]
name = "stac-cli"
version = "0.0.2"
edition = "2021"
description = "Asynchronous features for stac-rs"
documentation = "https://docs.rs/stac-cli"
readme = "README.md"
repository = "https://github.com/gadomski/stac-incubator-rs"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
categories = ["science", "data-structures"]

[dependencies]
anyhow = "1"
clap = { version = "3.1", features = ["derive"] }
console = "0.15"
indicatif = "0.17.1"
path-slash = "0.1"
reqwest = "0.11"
serde_json = "1"
stac = "0.0.4"
stac-async = { path = "../async", version = "0.0.1" }
tokio = { version = "1.17", features = ["macros", "sync", "rt-multi-thread"] }
url = "2"

[[bin]]
name = "stac"
path = "src/main.rs"

